# cs32

./: .gitignore  README.md  cs_zip
homework1/: CMakeLists.txt  CarMap.h  Map.cpp  Map.h  files.txt  newMap.h  testnewMap.cpp
homework1/src/: CarMap.cpp  newMap.cpp  testCarMap.cpp  testMap.cpp
homework2/: CMakeLists.txt  files.txt  hw.txt
homework2/include/: Map.h
homework2/src/: eval.cpp  eval_test.cpp  maze.cpp  mazequeue.cpp  mazestack.cpp
homework3/: CMakeLists.txt  files.txt
homework3/src/: linear.cpp  maze.cpp  sport.cpp  tree.cpp
homework3/src/test/: linear_test.cpp  maze_test.cpp  sport_test.cpp  tree_test.cpp
homework4/: CMakeLists.txt  files.txt  hw.txt
homework4/include/: Map.h
homework4/src/: badlist.cpp  badvector.cpp  list.cpp  oddlist.cpp  oddvector.cpp  sorts.cpp
homework4/src/test/: 3e.cpp  bad_test.cpp  list_test.cpp  map_test.cpp  odd_test.cpp
homework5/: hw.txt
midterm1/: CMakeLists.txt  q2.cpp  q3.cpp
midterm2/: CMakeLists.txt  q2.cpp  q3.cpp  q4.cpp
project1/: CMakeLists.txt  files.txt  newgarks.linux  newminigarks.linux
project1/include/: Game.h  Gark.h  History.h  Mesa.h  Player.h  globals.h
project1/src/: Game.cpp  Gark.cpp  History.cpp  Mesa.cpp  Player.cpp  main.cpp  utilities.cpp
project2/: CMakeLists.txt  files.txt  report.docx
project2/include/: Map.h  OurType.h
project2/src/: Map.cpp  main.cpp  smallberg.cpp
project3/: CMakeLists.txt  files.txt  report.docx
project3/include/: Actor.h  GameConstants.h  GameController.h  GameWorld.h  GraphObject.h  Level.h  SoundFX.h  SpriteManager.h  StudentWorld.h
project3/src/: Actor.cpp  GameController.cpp  GameWorld.cpp  StudentWorld.cpp  main.cpp
project4/: CMakeLists.txt  files.txt  report.docx  samplep4  tester
project4/include/: AttributeTranslator.h  MatchMaker.h  MemberDatabase.h  PersonProfile.h  RadixTree.h  provided.h  utility.h
project4/src/: AttributeTranslator.cpp  MatchMaker.cpp  MemberDatabase.cpp  PersonProfile.cpp  main.cpp  utility.cpp
project4/src/test/: radix.cpp
